# MathematicaCppProgramming

./: README.md
LibraryLink/: README.md
LibraryLink/HelloLibraryLink/: CMakeLists.txt  HelloLibraryLink.nb
LibraryLink/HelloLibraryLink/src/: WolframLibrary.cpp  mylib.cpp
WSTP/: README.md  tree
WSTP/AnotherExample/: CMakeLists.txt  README.md  WSTP.tm  reverse_list.cpp  say_hello.cpp
WSTP/DeveloperKit/: WSTP.cmake
WSTP/DeveloperKit/Linux-x86-64/CompilerAdditions/: wsprep  wstp.h
WSTP/DeveloperKit/Windows-x86-64/CompilerAdditions/: wstp.h  wstp64i4m.lib
WSTP/DeveloperKit/Windows-x86-64/Documentation/English/: MLLicense.nb
WSTP/Example_addtwo/: CMakeLists.txt  addtwo.tm  main.cpp
WSTP/HelloWSTP/: CMakeLists.txt  HelloWSTP.nb  README.md  WSTP.tm  main.cpp
